# graduate_work

./: .flake8  .pre-commit-config.yaml  README.md  README3.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
admin_panel/: Dockerfile  entrypoint.sh  manage.py  requirements.txt
admin_panel/admin_panel/: admin.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
admin_panel/config/: entrypoint.sh  settings.py
admin_panel/config/components/: auth.py  base_dir.py  database.py  debug.py  installed_apps.py  middleware.py  network.py  templates.py
admin_panel/uwsgi/: uwsgi.ini
billing/: Dockerfile  pyproject.toml
billing/src/: main.py
billing/src/domain/aggregates_model/external_payment_aggregate/: external_payment.py  external_payment_amount.py  external_payment_confirm_url.py  external_payment_id.py  external_payment_status.py
billing/src/domain/aggregates_model/external_refund_aggregate/: external_refund.py  external_refund_amount.py  external_refund_id.py  external_refund_payment_id.py  external_refund_status.py
billing/src/domain/aggregates_model/payment_aggregate/: payment.py  payment_amount.py  payment_external_body.py  payment_external_id.py  payment_id.py  payment_refunded.py  payment_reposytory.py  payment_system_id.py  payment_user_id.py  session_id.py
billing/src/domain/aggregates_model/user_aggregate/: user.py  user_id.py
billing/src/domain/seed_work/: descriptor.py  descriptors.py
billing/src/domain/services/: auth_service.py  notification_service.py  payment_system.py  payment_system_callback.py
billing/src/domain/services/notification_service/: notification_service.py
billing/src/infrastructure/auth_proto/: auth_pb2.py  auth_pb2_grpc.py
billing/src/infrastructure/auth_service/: auth_exceptions.py  auth_pb2_grpc.py  movie_auth_service.py
billing/src/infrastructure/db/: postgres.py
billing/src/infrastructure/notification_system/: movie_notification_system.py  request_model.py
billing/src/infrastructure/payment_repository/: payment_reposytory.py
billing/src/infrastructure/payment_system/: stripe_payment_system.py  yookassa_payment_system.py
billing/src/infrastructure/payment_system/core/: config.py
billing/src/web_api/: builder.py
billing/src/web_api/config/: settings.py
billing/src/web_api/configs/: logger.py  openapi.py  settings.py
billing/src/web_api/dependencies/: common.py  db.py  domain.py  infrastructure.py  jwt.py
billing/src/web_api/errors/: exceptions.py  handlers.py
billing/src/web_api/routers/: health.py
billing/src/web_api/routers/v1/endpoints/: cancel_page.py  payments.py  refunds.py  stripe.py  success_page.py
billing/src/web_api/routers/v1/schemas/: errors.py  responses.py
billing/src/web_api/services/: jwt.py
billing/src/web_api/templates/: cancel.html  success.html
documentation/: Billing_Service_Schema.drawio.xml  Project_Context_Schema  Statement.md
env_files/: admin.env.example  billing.env.example  payment_db.env.example  pyment_db.env.example  scheduler.env.example  stripe.env.example
nginx/: nginx.conf
nginx/configs/: billing.conf
payment_api/: Dockerfile  pyproject.toml
payment_api/src/core/: config.py
payment_db/docker-entrypoint-initdb.d/: pyment_db_init.sql
payment_db_init/: pyment_db_init.sql
scheduler/: Dockerfile  main.py  pyproject.toml
scheduler/core/: logger.py  settings.py
scheduler/src/: postgres.py  scheduler.py
scheduler/src/external_services/auth_service/: auth_pb2.py  auth_pb2_grpc.py  authorization_service.py
scheduler/src/external_services/notification_service/: notification_service.py  requests_model.py
scheduler/src/repositories/: postgres.py
stripe_service/: pyproject.toml
stripe_service/src/: .env
stripe_service/src/api/v1/: main.py  payment.py
stripe_service/src/api/v1/templates/: success.html
stripe_service/src/core/: config.py
(+18 files in other folders)
