[tool.poetry]
name = "Notification Service"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"
[tool.poetry.dependencies]


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = 'auth_pb2.py'

[tool.isort]
profile = "black"
src_paths = [
    "billing/src",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
ignore_errors = false
exclude = [
    "venv",
    ".vscode",
    "billing/src/infrastructure/auth_service/**/*.py",
]
files = "./**/*.py"

[[tool.mypy.overrides]]
module = "billing.src.infrastructure.auth_service.*"
ignore_errors = true
