[tool.poetry]
name = "billing"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

fastapi = "^0.88.0"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

backoff = "^2.2.1"
orjson = "^3.8.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
grpcio = "1.46.1"
grpcio-tools = "1.46.1"
stripe = "^5.0.0"
aiohttp = "^3.8.3"
yookassa = "^2.3.4"
psycopg = "^3.1.8"
psycopg-binary = "^3.1.8"
cachetools = "^5.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = [
    "src",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
