[tool.poetry]
name = "payment-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "payment_api"}]

[tool.poetry.dependencies]
python = ">=3.7,<4"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
