[tool.poetry]
name = "billing"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
backoff = "^2.2.1"
python = "^3.10"
psycopg = "^3.1.8"
psycopg-binary = "^3.1.8"
pydantic = "1.10.4"
grpcio = "1.46.1"
grpcio-tools = "1.46.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = [
    "src",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
