[tool.poetry]
name = "payment-api"
version = "0.1.0"
description = ""
authors = ["Alexey Ostanin <verb11@list.ru>"]
readme = "README.md"
packages = [{include = "payment_api"}]

[tool.poetry.dependencies]
python = "^3.11"
stripe = "^5.0.0"
isort = "^5.11.4"
aioredis = "^2.0.1"
fastapi = "^0.89.1"
orjson = "^3.8.5"
uvicorn = "^0.20.0"
uvloop = "^0.17.0"
pydantic = "^1.10.4"
jinja2 = "^3.1.2"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
